--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/web2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -338,7 +338,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card 3</h4>
                 <p>Card</p>
@@ -430,59 +430,44 @@
 
         <div class="section-title">
           <h2>Music</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Drums</h3>
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Keyboard</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4></h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Piano</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4></h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
           </div>
         </div>
@@ -497,59 +482,44 @@
 
         <div class="section-title">
           <h2>Sports</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Badminton</h3>
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Running</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p></p>
+              <h4></h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Gym</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4></h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>X</h4>
+              <h5></h5>
+              <p><em> </em></p>
             </div>
           </div>
         </div>
@@ -707,7 +677,7 @@
                   <i class="fad fa-pound-sign"></i>
                 </div>
                 <h4><a href="">Economics</a></h4>
-                <p>Economics are the study of money in government and companies.</p>
+                <p><em> are the study of money in government and companies.</em></p>
               </div>
             </div>
   
@@ -733,11 +703,11 @@
                   <i class="fad fa-book-spells"></i>
                 </div>
                 <h4><a href="">Book Reviews</a></h4>
-                <p>Geography is the explanation to why the physical and manmade propoties of earth exist and how they do so.</p>
+                <p>Book reviews ae a wonderful insight into the many wonderful and terrible books you may want to read.</p>
               </div>
             </div>
   
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box iconbox-purple">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -746,7 +716,7 @@
                   <i class="fad fa-archway"></i>
                 </div>
                 <h4><a href="">History</a></h4>
-                <p>Philosophy is a person's way of thinking about abstract things like life.</p>
+                <p>History is the study of the past and how civilisation developed.</p>
               </div>
             </div>
   
@@ -759,7 +729,7 @@
                   <i class="fad fa-landmark"></i>
                 </div>
                 <h4>Geopolitics</h4>
-                <p>English is made up of reading - answering questions about a text - and writing - making up a story.</p>
+                <p>Geopolitics is the study of how countries interact with one another.</p>
           </div>
             </div>
             
