--- a/index.html
+++ b/index.html
@@ -189,6 +189,31 @@
               <img src="./assets/img/Willow.jpg" style="width: 30%;">
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>First Artwork</h4>
+              <ul>
+              <img src="./assets/img/Blend.jpg" style="width: 60%;">
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Favourite Artwork</h4>
+              <ul>
+              <img src="./assets/img/Blend.jpg" style="width: 60%;">
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Other Artworks</h4>
+              <ul>
+              <img src="./assets/img/Blend.jpg" style="width: 30%;">
+              <img src="./assets/img/Butterfly.jpg" style="width: 30%;">
+              <img src="./assets/img/FlowerSwirl.jpg" style="width: 30%;">
+              <img src="./assets/img/Halloween.jpg" style="width: 30%;">
+              <img src="./assets/img/Lavender.jpg" style="width: 30%;">
+              <img src="./assets/img/Owls.jpg" style="width: 30%;">
+              <img src="./assets/img/Tulip.jpg" style="width: 30%;">
+              <img src="./assets/img/Willow.jpg" style="width: 30%;">
+              </ul>
+            </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Origami</h3>
@@ -200,15 +225,10 @@
               <img src="">
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>The beginning</h4>
+              <h5>2015</h5>
+              <p><em>For the first time I could create something.</em></p>
+              <p>I finally learned to create paper aeroplanes and chatterboxes! I had begun my adventure into the fascinating world of the Japanese art</p>
             </div>
           </div>
         </div>
@@ -280,7 +300,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/c1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -338,12 +358,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/web1.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/web1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
