--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="section-title">
           <h2>Art</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Art is a hobby I have always wanted to take on in its many forms</p>
         </div>
 
         <div class="row">
@@ -221,14 +221,38 @@
               <h4>Before my Time to Shine</h4>
               <h5>2014-2015</h5>
               <p><em>Origami was a wonder in my mind so vivid.</em></p>
-              <p>At the time I was fascinated by my elder brother's awesome origami. He'd try and teach me , but to me it was magic that only he could do.</p>
+              <p>At the time I was fascinated by my elder brother's awesome origami. He'd try and teach me, but to me it was magic that only he could do.</p>
               <img src="">
             </div>
             <div class="resume-item">
               <h4>The beginning</h4>
-              <h5>2015</h5>
+              <h5>2015-2016</h5>
               <p><em>For the first time I could create something.</em></p>
-              <p>I finally learned to create paper aeroplanes and chatterboxes! I had begun my adventure into the fascinating world of the Japanese art</p>
+              <p>I finally learned to create paper aeroplanes and chatterboxes! I had begun my adventure into the fascinating world of the Japanese art.</p>
+            </div>
+            <div class="resume-item">
+              <h4>The rise</h4>
+              <h5>2017-2018</h5>
+              <p><em>My journey kicked off.</em></p>
+              <p>I was finally starting to build my knowledge of the intricate art. By the end of 2018, I could create trees and hearts.</p>
+            </div>
+            <div class="resume-item">
+              <h4>Harry Potter</h4>
+              <h5>2018-2019</h5>
+              <p><em>I got a Harry Potter origami book.</em></p>
+              <p>I was now able to create scenes from Harry Potter from dragons to unicorns.</p>
+            </div>
+            <div class="resume-item">
+              <h4>The society</h4>
+              <h5>2019</h5>
+              <p><em>I became one of the two leaders of an origami society. In this sselective group we created and taught origami</em></p>
+              <p></p>
+            </div>
+            <div class="resume-item">
+              <h4>The current</h4>
+              <h5>2020-NOW</h5>
+              <p><em>Now I am the origami master I have dreamed of.</em></p>
+              <p>I am now able to create broomsticks to magic stars and even have an origami website</p>
             </div>
           </div>
         </div>
@@ -300,20 +324,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/c1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/c1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m0.png" class="img-fluid" alt="">
@@ -378,6 +388,20 @@
                 <p>html & CSS</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/m2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA HTML & CSS"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/c1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Card 2</h4>
+                <p>Card</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/c1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
