--- a/index.html
+++ b/index.html
@@ -222,30 +222,39 @@
               <h5>2014-2015</h5>
               <p><em>Origami was a wonder in my mind so vivid.</em></p>
               <p>At the time I was fascinated by my elder brother's awesome origami. He'd try and teach me, but to me it was magic that only he could do.</p>
-              <img src="">
+              <img src="./assets/img/4NingaStar.jpg" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/Heart.jpg" style="width: 45%; padding: 2%;">
             </div>
             <div class="resume-item">
               <h4>The beginning</h4>
               <h5>2015-2016</h5>
               <p><em>For the first time I could create something.</em></p>
               <p>I finally learned to create paper aeroplanes and chatterboxes! I had begun my adventure into the fascinating world of the Japanese art.</p>
+              <img src="./assets/img/chatterbox1.jpg" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/chatterbox2.jpg" style="width: 45%; padding: 2%;">
             </div>
             <div class="resume-item">
               <h4>The rise</h4>
               <h5>2017-2018</h5>
               <p><em>My journey kicked off.</em></p>
               <p>I was finally starting to build my knowledge of the intricate art. By the end of 2018, I could create trees and hearts.</p>
+              <img src="./assets/img/lotus.jpg" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/fish.jpg" style="width: 45%; padding: 2%;">
             </div>
             <div class="resume-item">
               <h4>Harry Potter</h4>
               <h5>2018-2019</h5>
               <p><em>I got a Harry Potter origami book.</em></p>
               <p>I was now able to create scenes from Harry Potter from dragons to unicorns.</p>
+              <img src="./assets/img/owl.png" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/4NingaStar.jpg" style="width: 45%; padding: 2%;">
             </div>
             <div class="resume-item">
               <h4>The society</h4>
               <h5>2019</h5>
               <p><em>I became one of the two leaders of an origami society. In this sselective group we created and taught origami</em></p>
+              <img src="./assets/img/oButterfly.jpg" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/frog.jpg" style="width: 45%; padding: 2%;">
               <p></p>
             </div>
             <div class="resume-item">
@@ -253,6 +262,8 @@
               <h5>2020-NOW</h5>
               <p><em>Now I am the origami master I have dreamed of.</em></p>
               <p>I am now able to create broomsticks to magic stars and even have an origami website</p>
+              <img src="./assets/img/wheel.jpg" style="width: 45%; padding: 2%;">
+              <img src="./assets/img/8NinjaStar.jpg" style="width: 45%; padding: 2%;">
             </div>
           </div>
         </div>
@@ -721,7 +732,7 @@
                   <i class="fad fa-pound-sign"></i>
                 </div>
                 <h4><a href="">Economics</a></h4>
-                <p><em> are the study of money in government and companies.</em></p>
+                <p>Economics are the study of money in government and companies.</p>
               </div>
             </div>
   
@@ -788,7 +799,7 @@
                 <i class="fad fa-map"></i>
               </div>
               <h4><a href="">Maps</a></h4>
-              <p>Reasoning is thinking about the consequences of certain adjustments to words and shapes.</p>
+              <p>Maps are tools used to dive deeper into the world's secrets.</p>
             </div>
           </div>
         
@@ -802,7 +813,7 @@
               <i class="fad fa-paw-claws"></i>
             </div>
             <h4><a href="">Lion Learning</a></h4>
-            <p>Reasoning is thinking about the consequences of certain adjustments to words and shapes.</p>
+            <p>Lion Learning was a fuun and intuitive course by Hampton School.</p>
           </div>
         </div>
       
@@ -816,7 +827,7 @@
             <i class="fad fa-exclamation"></i>
           </div>
           <h4><a href="">Fun Facts</a></h4>
-          <p>Reasoning is thinking about the consequences of certain adjustments to words and shapes.</p>
+          <p>Fun Facts are fun insights into the many things across earth.</p>
         </div>
       </div>
     </div>
