--- a/index.html
+++ b/index.html
@@ -494,6 +494,10 @@
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
+              <video width="200" height="400" controls autoplay preload="auto">
+                <source src="assets/videos/drums.mp4" />
+                </video>
+  
               <p><em> </em></p>
             </div>
             <div class="resume-item">
