--- a/index.html
+++ b/index.html
@@ -496,8 +496,7 @@
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="auto">
                 <source src="assets/videos/drums.mp4" />
-                </video>
-  
+              </video>
               <p><em> </em></p>
             </div>
             <div class="resume-item">
@@ -516,6 +515,10 @@
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
+              <video width="200" height="400" controls autoplay preload="auto">
+                <source src="assets/videos/piano.mp4" />
+              </video>
+
               <p><em> </em></p>
             </div>
             <div class="resume-item">
