--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
-              <video width="200" height="400" controls autoplay preload="auto">
+              <video width="200" height="400" controls autoplay preload="metadata">
                 <source src="assets/videos/drums.mp4" />
               </video>
               <p><em> </em></p>
@@ -515,7 +515,7 @@
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
-              <video width="200" height="400" controls autoplay preload="auto">
+              <video width="200" height="400" controls autoplay preload="metadata">
                 <source src="assets/videos/piano.mp4" />
               </video>
 
