--- a/subjects/math.html
+++ b/subjects/math.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.jpg" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -30,9 +30,9 @@
 </head>
 <body>
     <div class="section-title subject">
-        <h2>English</h2>
-        <p>English is made up of reading - answering questions about a text - and writing - making up a story.</p>
-    </div>  
+      <h4>Maths</h4>
+      <p>Maths is the study of numbers, shapes and the relationships between both concepts.</p>
+    </div>
 
     
       <div class="back">
