--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <source src="assets/videos/drums.mp4" />
+                <!--source src="assets/videos/drums.mp4" /-->
               </video>
               <p><em> </em></p>
             </div>
@@ -516,7 +516,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <source src="assets/videos/piano.mp4" />
+                <!--source src="assets/videos/piano.mp4" /-->
               </video>
 
               <p><em> </em></p>
@@ -551,23 +551,28 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Badminton</h3>
             <div class="resume-item">
-              <h4></h4>
-              <h5></h5>
-              <p><em> </em></p>
+              <h4>First Time</h4>
+              <h5>2015</h5>
+              <p>I went with my dad, who played badminton with his friends, to roller skate. One day, I got interested and my dad taught me how to play.</p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>Joining Saturday Smashers</h4>
               <h5></h5>
-              <p><em> </em></p>
+              <p>I joined the club my brother went to in order to improve my skills in the sport. This club is in Southall at the Badminton Dome.</p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>David Lloyd</h4>
               <h5></h5>
-              <p><em> </em></p>
+              <p>We joined a club called David Lloyd right in Hampton. There I am being coached by Caroline Cooper</p>
+            </div>
+            <div class="resume-item">
+              <h4>Creation of Y6 Badminton Club</h4>
+              <h5></h5>
+              <p>Me and my closest school friends created a weekly badminton club on Sundays for 2 hours between 6 and 8pm. It is extremely lively.</p>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Gym</h3>
+            <h3 class="resume-title">Fitness and Gym</h3>
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
