--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <!--source src="assets/videos/drums.mp4" /-->
+                <source src="assets/videos/drums.mp4" />
               </video>
               <p><em> </em></p>
             </div>
@@ -516,7 +516,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <!--source src="assets/videos/piano.mp4" /-->
+                <source src="assets/videos/piano.mp4" />
               </video>
 
               <p><em> </em></p>
