--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i></bo>
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
@@ -300,8 +300,8 @@
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/k1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="./p1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/k1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="fad fa-expand"></i></a>
+                  <a href="./p1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -314,8 +314,8 @@
                 <h4>Microsoft</h4>
                 <p>JavaScript</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/m1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA JavaScript"><i class="bx bx-plus"></i></a>
-                  <a href="p2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/m1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA JavaScript"><i class="fad fa-expand"></i></a>
+                  <a href="p2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -328,8 +328,8 @@
                 <h4>App 2</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/k2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="p3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/k2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Expand"><i class="fad fa-expand"></i></a>
+                  <a href="p3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Info"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -342,8 +342,8 @@
                 <h4>Microsoft</h4>
                 <p>Python</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/m0.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA Python"><i class="bx bx-plus"></i></a>
-                  <a href="p4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/m0.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA Python"><i class="fad fa-expand"></i></a>
+                  <a href="p4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></i></a>
                 </div>
               </div>
             </div>
@@ -356,8 +356,8 @@
                 <h4>App 3</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/music1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="p5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/music1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="fad fa-expand"></i></a>
+                  <a href="p5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -370,8 +370,8 @@
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/web2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="p6.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/web2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="fad fa-expand"></i></a>
+                  <a href="p6.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -384,8 +384,8 @@
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/web1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="p7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/web1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="fad fa-expand"></i></a>
+                  <a href="p7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -398,8 +398,8 @@
                 <h4>Microsoft</h4>
                 <p>html & CSS</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/m2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA HTML & CSS"><i class="bx bx-plus"></i></a>
-                  <a href="p8.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/m2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MTA HTML & CSS"><i class="fad fa-expand"></i></a>
+                  <a href="p8.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -412,8 +412,8 @@
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/c1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="p9.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/c1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="fad fa-expand"></i></a>
+                  <a href="p9.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="fad fa-info-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -495,7 +495,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <source src="assets/videos/drums.mp4" />
+                <!--source src="assets/videos/drums.mp4" /-->
               </video>
               <p><em> </em></p>
             </div>
@@ -516,7 +516,7 @@
               <h4></h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
-                <source src="assets/videos/piano.mp4" />
+                <!--source src="assets/videos/piano.mp4" /-->
               </video>
 
               <p><em> </em></p>
@@ -863,7 +863,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fad fa-chevron-double-up"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fad fa-angle-double-up"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
