--- a/p1.html
+++ b/p1.html
@@ -94,7 +94,7 @@
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fab fa-chevron-double-up"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fad fa-angle-double-up"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
