--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Python</li>
+              <li data-filter=".filter-app">WhiteHat Junior (Byju's future school)</li>
               <li data-filter=".filter-card">Web Design</li>
               <li data-filter=".filter-web">Certifications</li>
             </ul>
@@ -335,7 +335,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -405,7 +405,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/c1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -492,7 +492,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Drums</h3>
             <div class="resume-item">
-              <h4></h4>
+              <h4>Inspiration</h4>
               <h5></h5>
               <video width="200" height="400" controls autoplay preload="metadata">
                 <!--source src="assets/videos/drums.mp4" /-->
@@ -500,12 +500,27 @@
               <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>Keyboard</h4>
               <h5></h5>
               <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>Grade 1</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Simply Piano</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Performing</h4>
+              <h5></h5>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Grade 2</h4>
               <h5></h5>
               <p><em> </em></p>
             </div>
