--- a/p2.html
+++ b/p2.html
@@ -52,7 +52,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/m0.png" style="width: 80%;" alt="">
+                  <img src="assets/img/portfolio/m0.png" style="width: 80%;margin-left: 50px;" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" style="width: 50%;" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
                 </div>
 
               </div>
