--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
 </p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
             </p>
+            <p>Please check out my youtube channel: </p><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;">My Channel</a>
           </div>
         </div>
 
@@ -192,26 +193,26 @@
             <div class="resume-item">
               <h4>First Artwork</h4>
               <ul>
-              <img src="./assets/img/Blend.jpg" style="width: 60%;">
+              <img src="./assets/img/labhya/Candyland.jpg" style="width: 60%;">
               </ul>
             </div>
             <div class="resume-item">
               <h4>Favourite Artwork</h4>
               <ul>
-              <img src="./assets/img/Blend.jpg" style="width: 60%;">
+              <img src="./assets/img/labhya/Space.jpg" style="width: 60%;">
               </ul>
             </div>
             <div class="resume-item">
               <h4>Other Artworks</h4>
               <ul>
-              <img src="./assets/img/Blend.jpg" style="width: 30%;">
-              <img src="./assets/img/Butterfly.jpg" style="width: 30%;">
-              <img src="./assets/img/FlowerSwirl.jpg" style="width: 30%;">
-              <img src="./assets/img/Halloween.jpg" style="width: 30%;">
-              <img src="./assets/img/Lavender.jpg" style="width: 30%;">
-              <img src="./assets/img/Owls.jpg" style="width: 30%;">
-              <img src="./assets/img/Tulip.jpg" style="width: 30%;">
-              <img src="./assets/img/Willow.jpg" style="width: 30%;">
+              <img src="./assets/img/labhya/CityStreet.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/Peace.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/WarliDance.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/WarliPlay.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/StarryNight.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/PatternAfrica.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/AfricanCouple.jpg" style="width: 30%; margin: 10px;">
+              <img src="./assets/img/labhya/Animals.jpg" style="width: 30%; margin: 10px;">
               </ul>
             </div>
           </div>
