--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
 </p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
             </p>
-            <p>Please check out my youtube channel: </p><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;">My Channel</a>
+            <p>Please check out my youtube channel: <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;">My YouTube Channel</a></p>
           </div>
         </div>
 
